# vhdcorp

./: .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  ecosystem.config.js  package.json  skills-lock.json
agent/: .env.example  pyproject.toml  run.sh
agent/app/: main.py  mcp_server.py
agent/app/api/: a2a.py  admin.py  admin_ai.py  chat.py  conversations.py  health.py  tts.py
agent/app/core/: config.py  logging.py  rate_limit.py  usage.py
agent/app/db/: catalog.py  database.py  repository.py
agent/app/graph/: base.py  builder.py  state.py
agent/app/graph/nodes/: agent_node.py  context_node.py  guardrail_node.py  tool_node.py
agent/app/guardrails/: base.py  injection.py  length.py  pipeline.py
agent/app/memory/: base.py  long_term.py  short_term.py  summary.py
agent/app/services/: chat_service.py  gmail_reader.py  knowledge.py  memory_service.py  product_sync.py  vision.py
agent/app/tools/: base.py  contact.py  knowledge.py  products.py  site.py  ui.py  web_search.py
agent/data/: checkpoints.sqlite-shm  checkpoints.sqlite-wal  knowledge.md  products.json
agent/scripts/: sync_products.py
agent/tests/: conftest.py  test_a2a.py  test_admin.py  test_api.py  test_gmail_reader.py  test_guardrails.py  test_image.py  test_knowledge.py  test_mcp.py  test_memory.py  test_sync.py  test_tools.py  test_tts.py  test_ui_tools.py
agent/tests/fixtures/: products.json
be/: .env.example  .eslintrc.js  .gitignore  README.md  config.json  modified_config.json  package-lock.json  package.json  payload_config.json  (+2 more)
(+445 files in other folders)
